refactors jwt to use "oauth2-resource-server" library. Adds more unit tests.
